# EcoBridge

./: README.md  deploy.sh  manifest.yml
backend/: .cfignore  .dockerignore  .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml
backend/app/: main.py
backend/app/api/dependencies/: auth.py  db.py
backend/app/api/errors/: __init__.py
backend/app/api/errors/repositories/: __init__.py  users.py
backend/app/api/errors/services/: __init__.py  auth.py
backend/app/api/routes/: __init__.py  users.py
backend/app/core/: config.py  tasks.py
backend/app/db/: tasks.py
backend/app/db/repositories/: base.py  users.py
backend/app/models/: __init__.py  base.py  product.py  user.py  utils.py
backend/app/schemas/: token.py  user.py
backend/app/services/: __init__.py  auth.py  base.py
backend/app/utils/datastructures/: state.py
backend/tests/: conftest.py  test_users.py
frontend/: .cfignore  README.md  package.json  tailwind.config.js
frontend/components/: CardCarousel.tsx  Event.tsx  Header.jsx  Header.tsx  Item.tsx  Layout.tsx  LoginForm.tsx  Person.tsx  SearchInput.tsx  Sidebar.tsx
frontend/context/: index.tsx
frontend/context/reducers/: auth.reducer.ts
frontend/data/: resources.dummy.json
frontend/pages/: _app.tsx  index.tsx
frontend/pages/about-us/: index.tsx
frontend/pages/events/: index.tsx
frontend/pages/learn/: index.tsx
frontend/pages/login/: index.tsx
frontend/pages/resources/: index.tsx
frontend/services/: userService.ts
frontend/styles/: globals.css
